--- a/html/background.html
+++ b/html/background.html
@@ -13,6 +13,7 @@
 	<script src="../js/warcGenerator.js"></script>
 	<script src="../js/moment-with-langs.min.js"></script>
     <script src="../js/code.js"></script>
+    <script src="../js/contextmenu.js"></script>
   </head>
   <body><iframe id="data" src=""></iframe></body>
 </html>
